<?xml version="1.0"?>
<package format="2">
  <name>interbotix_rpi_toolbox</name>
  <version>0.0.0</version>
  <description>The interbotix_rpi_toolbox metapackage</description>
  <maintainer email="trsupport@trossenrobotics.com">Luke Schmitt</maintainer>
  <license>BSD</license>

  <author email="trsupport@trossenrobotics.com">Luke Schmitt</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>interbotix_rpi_modules</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
