<?xml version="1.0"?>
<package format="2">
  <name>interbotix_xs_ros_control</name>
  <version>0.0.0</version>
  <description>The interbotix_xs_ros_control package</description>
  <maintainer email="trsupport@trossenrobotics.com">Luke Schmitt</maintainer>
  <license>BSD</license>
  <author email="trsupport@trossenrobotics.com">Solomon Wiznitzer</author>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>ros2_controllers</depend>
  <depend>ros2controlcli</depend>
  <depend>xseries_msgs</depend>
  <depend>xacro</depend>
  <depend>sensor_msgs</depend>
  <depend>urdf</depend>
  <depend>joint_trajectory_controller</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
