<?xml version="1.0"?>
<package format="2">
  <name>interbotix_xs_ros_control</name>
  <version>0.0.0</version>
  <description>The interbotix_xs_ros_control package</description>
  <maintainer email="trsupport@trossenrobotics.com">Luke Schmitt</maintainer>
  <license>BSD</license>
  <author email="trsupport@trossenrobotics.com">Solomon Wiznitzer</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>interbotix_xs_msgs</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>joint_trajectory_controller</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>hardware_interface</build_export_depend>
  <build_export_depend>interbotix_xs_msgs</build_export_depend>
  <build_export_depend>joint_limits_interface</build_export_depend>
  <build_export_depend>joint_trajectory_controller</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>interbotix_xs_msgs</exec_depend>
  <exec_depend>joint_limits_interface</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <export>
  </export>
</package>
